fix: card dark mode

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -4,6 +4,7 @@
   --text-primary: #212529;
   --text-secondary: #18232e;
   --body: #fff;
+  --card: #fff;
   --text-menu: #fff;
   --text-body: #212529;
   --bg-aux-gray: #f8f9fa
@@ -14,6 +15,7 @@
   --text-primary: #fff;
   --text-secondary: #f5f5f5;
   --body: #141414;
+  --card: #434343;
   --text-menu: #fff;
   --text-body: #fff;
   --bg-aux-gray: #212529;
